// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flyout/Flyout alterCoordinates is called when rendering 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "anchorPoint": "top-left",
        "containerPosition": Object {
          "left": 0,
          "top": -5,
        },
        "pointerPosition": Object {
          "left": 0,
          "top": 1,
        },
      },
      Object {
        "actionRect": Object {
          "bottom": 0,
          "height": 0,
          "left": 0,
          "right": 0,
          "top": 0,
          "width": 0,
        },
        "panelRect": Object {
          "bottom": 0,
          "height": 0,
          "left": 0,
          "right": 0,
          "top": 0,
          "width": 0,
        },
        "pointerRect": Object {
          "bottom": 0,
          "height": 0,
          "left": 0,
          "right": 0,
          "top": 0,
          "width": 0,
        },
        "viewportRect": Object {
          "bottom": 0,
          "height": 0,
          "left": 0,
          "right": 0,
          "top": 0,
          "width": 0,
        },
      },
    ],
  ],
}
`;

exports[`flyout/Flyout snapshots renders a custom pointer 1`] = `
.emotion-0 {
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-0:visited {
  color: #ffffff;
}

.emotion-0 svg * {
  fill: #f5f5f5;
}

<div
  className="emotion-6 hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  >
    <button
      className="emotion-0"
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      onMouseUp={[Function]}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Click Me
      </span>
    </button>
  </div>
  <div
    className="emotion-5 hig__flyout-v1__container"
  >
    <div
      aria-hidden="true"
      className="emotion-1 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={undefined}
    >
      <span>
        my custom pointer
      </span>
    </div>
    <div
      className="emotion-4 hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": "150px",
        }
      }
    >
      <div
        className="emotion-3 hig__flyout-v1__panel-container__inner"
      >
        <div
          className="emotion-2 hig__flyout-v1__panel"
          onScroll={[Function]}
        >
          Hello World
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders children from the given render function 1`] = `
.emotion-0 {
<<<<<<< HEAD
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
=======
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 .hig__flyout-v1__pointer-border {
  fill: transparent;
}

.emotion-1 .hig__flyout-v1__pointer-background {
  fill: #ffffff;
}

.emotion-5 {
  background-color: #ffffff;
>>>>>>> 8711dfcb... test(flyout): update enzyme/jest snapshots
  border-radius: 4px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-0:visited {
  color: #ffffff;
}

.emotion-0 svg * {
  fill: #f5f5f5;
}

<div
  className="emotion-7 hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  >
    <button
      className="emotion-0"
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      onMouseUp={[Function]}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Render prop
      </span>
    </button>
  </div>
  <div
    className="emotion-6 hig__flyout-v1__container"
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={undefined}
    >
      <svg
        className="emotion-1"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="hig__flyout-v1__pointer-border"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="hig__flyout-v1__pointer-background"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-5 hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": "150px",
        }
      }
    >
      <div
        className="emotion-4 hig__flyout-v1__panel-container__inner"
      >
        <div
          className="emotion-3 hig__flyout-v1__panel"
          onScroll={[Function]}
        >
          Hello World
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders content from the given render function 1`] = `
.emotion-0 {
<<<<<<< HEAD
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
=======
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 .hig__flyout-v1__pointer-border {
  fill: transparent;
}

.emotion-1 .hig__flyout-v1__pointer-background {
  fill: #ffffff;
}

.emotion-5 {
  background-color: #ffffff;
>>>>>>> 8711dfcb... test(flyout): update enzyme/jest snapshots
  border-radius: 4px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-0:visited {
  color: #ffffff;
}

.emotion-0 svg * {
  fill: #f5f5f5;
}

<div
  className="emotion-7 hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  >
    <button
      className="emotion-0"
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      onMouseUp={[Function]}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Click Me
      </span>
    </button>
  </div>
  <div
    className="emotion-6 hig__flyout-v1__container"
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={undefined}
    >
      <svg
        className="emotion-1"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="hig__flyout-v1__pointer-border"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="hig__flyout-v1__pointer-background"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-5 hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": "150px",
        }
      }
    >
      <div
        className="emotion-4 hig__flyout-v1__panel-container__inner"
      >
        <div
          className="emotion-3 hig__flyout-v1__panel"
          onScroll={[Function]}
        >
          Content from render prop
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders open by default 1`] = `
.emotion-7 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 .hig__flyout-v1__pointer-border {
  fill: transparent;
}

.emotion-1 .hig__flyout-v1__pointer-background {
  fill: #ffffff;
}

.emotion-5 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-4 {
  position: relative;
}

.emotion-3 {
  min-width: 200px;
  max-width: 400px;
  max-height: 360px;
  padding: 12px;
  overflow-y: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-6 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<div
  className="emotion-7 hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  />
  <div
    className="emotion-6 hig__flyout-v1__container"
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={undefined}
    >
      <svg
        className="emotion-1"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="hig__flyout-v1__pointer-border"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="hig__flyout-v1__pointer-background"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-5 hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-4 hig__flyout-v1__panel-container__inner"
      >
        <div
          className="emotion-3 hig__flyout-v1__panel"
          onScroll={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders the panel from a basic render function 1`] = `
.emotion-0 {
<<<<<<< HEAD
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-0:visited {
  color: #ffffff;
}

.emotion-0 svg * {
  fill: #f5f5f5;
=======
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 .hig__flyout-v1__pointer-border {
  fill: transparent;
}

.emotion-1 .hig__flyout-v1__pointer-background {
  fill: #ffffff;
}

.emotion-3 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
>>>>>>> 8711dfcb... test(flyout): update enzyme/jest snapshots
}

<div
  className="emotion-4 hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  >
    <button
      className="emotion-0"
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      onMouseUp={[Function]}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Click Me
      </span>
    </button>
  </div>
  <div
    className="emotion-3 hig__flyout-v1__container"
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={undefined}
    >
      <svg
        className="emotion-1"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="hig__flyout-v1__pointer-border"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="hig__flyout-v1__pointer-background"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div>
      Hello World
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders the panel from a complex render function 1`] = `
.emotion-0 {
<<<<<<< HEAD
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
=======
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 .hig__flyout-v1__pointer-border {
  fill: transparent;
}

.emotion-1 .hig__flyout-v1__pointer-background {
  fill: #ffffff;
}

.emotion-4 {
  background-color: #ffffff;
>>>>>>> 8711dfcb... test(flyout): update enzyme/jest snapshots
  border-radius: 4px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-0:visited {
  color: #ffffff;
}

.emotion-0 svg * {
  fill: #f5f5f5;
}

<div
  className="emotion-6 hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  >
    <button
      className="emotion-0"
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      onMouseUp={[Function]}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Render prop
      </span>
    </button>
  </div>
  <div
    className="emotion-5 hig__flyout-v1__container"
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={undefined}
    >
      <svg
        className="emotion-1"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="hig__flyout-v1__pointer-border"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="hig__flyout-v1__pointer-background"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-4 hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-3 hig__flyout-v1__panel-container__inner"
      >
        <div
          data-mock="MyCustomContainer"
          onScroll={[Function]}
          style={
            Object {
              "maxHeight": undefined,
            }
          }
        >
          Content from render prop
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders with a basic set of props 1`] = `
.emotion-0 {
<<<<<<< HEAD
  border-width: 1px;
  border-style: solid;
  border-color: transparent;
=======
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 .hig__flyout-v1__pointer-border {
  fill: transparent;
}

.emotion-1 .hig__flyout-v1__pointer-background {
  fill: #ffffff;
}

.emotion-5 {
  background-color: #ffffff;
>>>>>>> 8711dfcb... test(flyout): update enzyme/jest snapshots
  border-radius: 4px;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  margin: 0;
  overflow: hidden;
  padding: 8px 16px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: #0696d7;
}

.emotion-0:visited {
  color: #ffffff;
}

.emotion-0 svg * {
  fill: #f5f5f5;
}

<div
  className="emotion-7 hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  >
    <button
      className="emotion-0"
      href={undefined}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      onMouseUp={[Function]}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Click Me
      </span>
    </button>
  </div>
  <div
    className="emotion-6 hig__flyout-v1__container"
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={undefined}
    >
      <svg
        className="emotion-1"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="hig__flyout-v1__pointer-border"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="hig__flyout-v1__pointer-background"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-5 hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": "150px",
        }
      }
    >
      <div
        className="emotion-4 hig__flyout-v1__panel-container__inner"
      >
        <div
          className="emotion-3 hig__flyout-v1__panel"
          onScroll={[Function]}
        >
          Hello World
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flyout/Flyout snapshots renders without props 1`] = `
.emotion-7 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  position: absolute;
  display: none;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 .hig__flyout-v1__pointer-border {
  fill: transparent;
}

.emotion-1 .hig__flyout-v1__pointer-background {
  fill: #ffffff;
}

.emotion-5 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-4 {
  position: relative;
}

.emotion-3 {
  min-width: 200px;
  max-width: 400px;
  max-height: 360px;
  padding: 12px;
  overflow-y: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

<div
  className="emotion-7 hig__flyout-v1--hidden hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  />
  <div
    className="emotion-6 hig__flyout-v1__container"
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={undefined}
    >
      <svg
        className="emotion-1"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          className="hig__flyout-v1__pointer-border"
          points="0,12 12,0 24,12"
        />
        <polygon
          className="hig__flyout-v1__pointer-background"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="emotion-5 hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="emotion-4 hig__flyout-v1__panel-container__inner"
      >
        <div
          className="emotion-3 hig__flyout-v1__panel"
          onScroll={undefined}
        />
      </div>
    </div>
  </div>
</div>
`;
